@@ -1,3 +1,7 @@
+2021-10-26 Danilo Chang
+
+	* Implement command: softNMSBoxes
+
 2021-10-25 Danilo Chang
 
 	* Implement command: TrackerDaSiamRPN
